Added composer install directive to the .cpanel.yml file

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -10,3 +10,4 @@
       - /bin/cp composer.json $DEPLOYPATH
       - /bin/cp composer.lock $DEPLOYPATH
       - /bin/cp run $DEPLOYPATH
+      - composer install
