--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -10,4 +10,4 @@
       - /bin/cp composer.json $DEPLOYPATH
       - /bin/cp composer.lock $DEPLOYPATH
       - /bin/cp run $DEPLOYPATH
-      - composer install
+      - /usr/local/bin/composer install
