Added creds.txt file

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -7,6 +7,7 @@
       - /bin/cp -R logs $DEPLOYPATH
       - /bin/cp -R public $DEPLOYPATH
       - /bin/cp -R vendor $DEPLOYPATH
+      - /bin/cp -R whogohost $DEPLOYPATH
       - /bin/cp .htaccess $DEPLOYPATH
       - /bin/cp composer.json $DEPLOYPATH
       - /bin/cp composer.lock $DEPLOYPATH
