--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -12,4 +12,4 @@
       - /bin/cp composer.json $DEPLOYPATH
       - /bin/cp composer.lock $DEPLOYPATH
       - /bin/cp run $DEPLOYPATH
-      - /bin/cp app/config/config_prod.php $DEPLOYPATHapp/config/config.php
+      - /bin/cp /app/config/config_prod.php $DEPLOYPATH/app/config/config.php
